--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./img/favicon-32x32.png"
     />
     <title>Frontend Mentor | Interactive rating component</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +27,7 @@
             <div class="card__icon">
               <img
                 class="card__icon-img"
-                src="./images/icon-star.svg"
+                src="./img/icon-star.svg"
                 alt="star"
               />
             </div>
@@ -55,7 +55,7 @@
         <div class="card__content flip">
           <img
             class="card__img"
-            src="./images/illustration-thank-you.svg"
+            src="./img/illustration-thank-you.svg"
             alt="Thank you!"
           />
           <div class="card__rating-result">
